modified html css js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>main</h1>
+    <button id="my-button">MOUSE</button>
+    
+    <div id="pie-zone"></div>
+        <h2></h2>
+        <h4></h4>
     <script src="./main.js">
     </script>
 </body>
