--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <button id="my-button">MOUSE</button>
+    <div id="buttons">
+        <button id="all">All</button>
+        <button id="zoeee">Zoe</button>
+        <button id="callan">Callan</button>
+        <button id="michael">Michael</button>
+        <button id="greg">Greg</button>
+    </div>
     
     <div id="pie-zone"></div>
-        <h2></h2>
-        <h4></h4>
+        
     <script src="./main.js">
     </script>
 </body>
